useing react as external file from cdb. nsometihng is wroing

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
         <title>React Webpack</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
     </head>
+
     <body>
         <section id="root"></section>
     </body>
